[package]
name = "ads101x"
authors = ["Ioan Herisanu <ioan.herisanu.dev@gmail.com>"]
categories = ["no-std"]
description = "TI ADS101x analog-to-digital convertor I2C driver"
documentation = "https://docs.rs/ads101x"
homepage = "https://github.com/iohe/ads101x"
keywords = ["ads101x"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/iohe/ads101x.git"
version = "0.1.0"
edition = "2018"

[badges]
travis-ci = { repository = "iohe/ads101x", branch = "master" }
coveralls = { repository = "iohe/ads101x", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.1"

[dev-dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
linux-embedded-hal = "0.3.0"
rppal = { version = "0.11.3", features = ["hal"] }

